# ITACoreLibs

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING.proto  LICENSE.md  README.md  how_to_build.md
